# sam-segmentation

./: .gitignore  README.md  __init__.py  pyproject.toml
operators/: generate_masks.py  grounded_sam2_backend.py  preview_mask.py  sam3_backend.py
panels/: sam_panel.py  sam_panel.rcss  sam_panel.rml
tests/: conftest.py  test_backend.py
